# random

./: .clangd  .gitmodules
add/: add_numbers.cpp
amd/: CMakeLists.txt  CollectAllCounters.cpp  LogTemperatures.cpp  enum_utils.cpp  enum_utils.hpp
arrow/: CMakeLists.txt  build-deps.sh  main.cpp
asm/x64/: CMakeLists.txt  main.cpp  some_func.asm
branch-prediction/: main.cpp
cacheline/: sharing.cpp
cgroups/: README.md  allocate.cpp  file_memory.cpp  setup_memory_cgroups.sh  setup_swap.sh  spinner.cpp
cpuid/: cpuid.c
csi/: CMakeLists.txt  install-dependencies.sh
csi/src/: CMakeLists.txt  main.cpp
csi/src/grpc/: CMakeLists.txt  server.cpp  server.h
csi/src/proto/: CMakeLists.txt  csi.proto
damon/: memory_access.cpp
dwarf/: CMakeLists.txt  hello.c  install-dependencies.sh  main.cc
elf/: a.out  elf_reader.cpp  my_lib.cpp  my_lib.h
fileshare/: test.c  test_dwarf
fileshare/test_dwarf.dSYM/Contents/: Info.plist
fileshare/test_dwarf.dSYM/Contents/Resources/DWARF/: test_dwarf
fileshare/test_dwarf.dSYM/Contents/Resources/Relocations/aarch64/: test_dwarf.yml
flushreload/: main.cpp
hugepages/: main.c  main.cpp
kvm/: CMakeLists.txt  kvm_main.cpp  kvm_vm.cpp  kvm_vm.h
lockfree/: stack.cpp
odbc/: CMakeLists.txt  install-deps.sh  main.cpp
pagemaps/: read_page_map.js
pagemaps/mmap/: mmap.c
stack_smashing/: example1.c  example2.c  example3.c  example4.c  exploit4.py  exploit5.py
zkvm/sp1/learn/: Cargo.toml
zkvm/sp1/learn/src/: main.rs
zkvm/sp1/script/: Cargo.toml  build.rs
zkvm/sp1/script/src/: main.rs
